--- a/week_2/assignment/css/stylesheet.css
+++ b/week_2/assignment/css/stylesheet.css
@@ -16,6 +16,9 @@ p {
   font-family: Helvetica;
   color: white;
 }
+section {
+  background: grey;
+}
 
 /* Simple Responsive Framework. */
 .row {
