--- a/week_2/assignment/css/stylesheet.css
+++ b/week_2/assignment/css/stylesheet.css
@@ -7,7 +7,7 @@ h1 {
 }
 
 p {
-  border: 1px solid black;
+  text-align: left;
   width: 90%;
   height: 150px;
   margin-right: auto;
@@ -16,8 +16,8 @@ p {
 }
 section {
   background: grey;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 20px;
+  margin-left: 10px;
 }
 
 /* Simple Responsive Framework. */
