--- a/week_2/assignment/css/stylesheet.css
+++ b/week_2/assignment/css/stylesheet.css
@@ -1,37 +1,69 @@
 /********** Base styles **********/
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 header {
-  margin-bottom: 15px;
+  margin-bottom: 50px;
+  margin-top: 20px;
   font-size: 30px;
+  text-align: center;
+}
+h2 {
+  position: relative;
+  top: 0;
+  left: 0;
+  float: right;
+  
+  border-left: 3px solid black;
+  border-bottom: 3px solid black;
+  padding: 5px 20px 5px 20px;
+  min-width: 110px;
   text-align: center;
 }
 
 p {
   text-align: left;
-  width: 90%;
-  height: 150px;
+  padding: 10px;
   margin-right: auto;
   margin-left: auto;
   font-family: Helvetica;
+  clear: right;
 }
 section {
-  background: grey;
-  margin-right: 20px;
-  margin-left: 10px;
+  background: grey;  
+  border: 3px solid black;    
+  position: relative;    
+  height: 170px;    
+  margin-right: 15px;    
+  margin-left: auto;    
+  margin-bottom: 15px;    
+  
+  }
+#title1{
+  background: red;
+}
+#title2 {
+  background: yellow;
+}
+#title3 {
+  background: blue;
 }
 
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
+  padding: 20px;
+  margin-bottom: 15px;
+  margin-left: 10px;
 }
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
+    
   }
   .col-lg-1 {
     width: 8.33%;
@@ -74,6 +106,7 @@ section {
 /********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+
     float: left;
     border: 1px solid green;
   }
