--- a/week_2/assignment/css/stylesheet.css
+++ b/week_2/assignment/css/stylesheet.css
@@ -35,7 +35,7 @@ section {
   background: grey;  
   border: 3px solid black;    
   position: relative;    
-  height: 170px;    
+  min-height: 170px;    
   margin-right: 15px;    
   margin-left: auto;    
   margin-bottom: 15px;    
@@ -144,5 +144,10 @@ section {
   }
   .col-md-12 {
     width: 100%;
+  }
+}
+@media (max-width: 362px){
+  section{
+    width: 270px;
   }
 }
